# rental-scrapy-bot

./: LICENSE  README.md  pyproject.toml
rental_scraper/: settings.py
rental_scraper/spiders/: buscaprop.py
